Add CLI commands for assets
