# bellhop/openapi/bellhop.yaml
@@ -166,6 +166,16 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Asset"
+    delete:
+      operationId: deleteAsset
+      summary: Delete an asset and all tags associated with it
+      parameters:
+        - $ref: "#/components/parameters/asset_id"
+      responses:
+        '404':
+          description: Asset not found
+        '204':
+          description: Asset was deleted
   /assets/{asset_id}/tags:
     get:
       operationId: listTags
